Updated all pages with dates for 2014 in the header and added notes that programme is for 2013.

--- a/Dates & programmes.html
+++ b/Dates & programmes.html
@@ -20,21 +20,22 @@ Linlithgow Palace</title>
 			<td width="30%" bgcolor="#FFFFFF">
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<span style="text-transform: uppercase; font-style: italic; font-weight: 700">
-			<font face="Fine Hand" size="6" color="#000080">24th year</font></span></p>
+			<font face="Fine Hand" size="6" color="#000080">25th year</font></span></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">Wednesday </font><font size="5">
-			<span style="font-family: Arial,sans-serif">17th, 24th July, </span>
-			<font face="Arial">&nbsp;</font></font><span style="font-family: Arial,sans-serif"><font size="5">31st 
-			July</font></span></b></p>
+			<b><font size="5" face="Arial">5 Wednesdays...</font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">7th &amp; </font>
-			<span style="font-family: Arial,sans-serif"><font size="5">14th 
-			August 2013</font></span></b></td>
+			<b><font size="5">
+			<span style="font-family: Arial,sans-serif">16th, 23rd, 30th July,</span>
+			<font face="Arial">&nbsp;</font></font></b></p>
+			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
+			<b><font size="5" face="Arial">6th &amp; </font>
+			<span style="font-family: Arial,sans-serif"><font size="5">13th 
+			August 2014</font></span></b></td>
 		</tr>
 		<tr>
 			<td bgcolor="#FFFFFF" align="center" colspan="2">
 			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Arial" color="#000080"><a href="index-2.html">
+			<font face="Arial" color="#000080"><a href="index.html">
 			<font face="Arial" color="#000080">
 			<span style="text-decoration: none">Home</span></font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</font><a href="Dates%20%26%20programmes.html">
@@ -59,25 +60,10 @@ Linlithgow Palace</title>
 	<table border="0" width="1000" bgcolor="#FFFFFF" cellspacing="4" cellpadding="4">
 		<tr>
 			<td colspan="2" align="center">
-			<p style="margin-top: 0; margin-bottom: 0"><b><font size="5">Dates &amp; Programmes</font></b></td>
-		</tr>
-		<tr>
-			<td align="center">
-			<p style="margin-top: 0; margin-bottom: 0">
-			<font size="2"><a href="Print%20Programmes.html">For printable version of programme click here</a></font></td>
-			<td align="center" width="41%">
-			<p style="margin-top: 0; margin-bottom: 0"><font size="2">
-			<a href="printable%20prog%20%202013.pdf">For a printable 
-			version in Adobe acrobat click here</a></font></td>
-		</tr>
-		<tr>
-			<td colspan="2" align="center">
-			<p class="MsoNormal" style="margin-top:0; margin-bottom:0">
-			<span style="font-family: Arial">
-			<span style="font-style: normal; font-variant: normal; font-weight: 700; font-family: Times New Roman">
-			<font size="2">&nbsp;</font></span><b><font size="2">*Some easy and 
-			difficult dances, danced together</font></b></span></td>
-		</tr>
+			<p style="margin-top: 0; margin-bottom: 0"><b><font size="5">Dates &amp; Programmes</font></b><br />
+			<font color="red">NOTE: These are the dates & programme for 2013 for reference. The 2014 programme will be available soon.</font></p>
+			</td>
+		</tr>		
 		<tr>
 			<td width="56%" valign="top" align="center">
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
@@ -369,5 +355,4 @@ Linlithgow Palace</title>
 </div>
 
 <!--msnavigation--></td></tr><!--msnavigation--></table></body>
-<!-- Mirrored from www.scotchhop.org.uk/Dates & programmes.htm by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 10 Feb 2014 22:51:12 GMT -->
 </html>
