--- a/Print Programmes.html
+++ b/Print Programmes.html
@@ -15,14 +15,14 @@ Linlithgow Palace</title>
 <table border="1" width="700" bordercolor="#C0C0C0">
 	<tr>
 		<td width="768" colspan="3">
-		<p align="center"><b>Scotch Hop 2013</b></td>
+		<p align="center"><b>Scotch Hop 2013</b><br />
+		<font color="red">NOTE: This is the programme for 2013. The 2014 programme will be available soon.</font></p></td>
 	</tr>
 	<tr>
 		<td width="768" colspan="3">
-				<a href="index-2.html">
+				<a href="index.html">
 		<span style="text-decoration: none; font-weight: 700">
-		<font size="2" color="#000080">Back</font></span></a><font size="2"><a href="printable%20prog%20%202013.pdf">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; For a printable 
-			version in Adobe acrobat click here</a></font></td>
+		<font size="2" color="#000080">Back</font></span></a></td>
 	</tr>
 	<tr>
 		<td valign="top" width="220" height="402">
@@ -389,5 +389,4 @@ text-align:center;line-height:normal">
 </table>
 
 </body>
-<!-- Mirrored from www.scotchhop.org.uk/Print Programmes.htm by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 10 Feb 2014 22:51:38 GMT -->
 </html>
