--- a/Q & A.html
+++ b/Q & A.html
@@ -23,21 +23,22 @@ Palace</title>
 			<td width="30%" bgcolor="#FFFFFF">
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<span style="text-transform: uppercase; font-style: italic; font-weight: 700">
-			<font face="Fine Hand" size="6" color="#000080">24th year</font></span></p>
+			<font face="Fine Hand" size="6" color="#000080">25th year</font></span></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">Wednesday </font><font size="5">
-			<span style="font-family: Arial,sans-serif">17th, 24th July, </span>
-			<font face="Arial">&nbsp;</font></font><span style="font-family: Arial,sans-serif"><font size="5">31st 
-			July</font></span></b></p>
+			<b><font size="5" face="Arial">5 Wednesdays...</font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">7th &amp; </font>
-			<span style="font-family: Arial,sans-serif"><font size="5">14th 
-			August 2013</font></span></b></td>
+			<b><font size="5">
+			<span style="font-family: Arial,sans-serif">16th, 23rd, 30th July,</span>
+			<font face="Arial">&nbsp;</font></font></b></p>
+			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
+			<b><font size="5" face="Arial">6th &amp; </font>
+			<span style="font-family: Arial,sans-serif"><font size="5">13th 
+			August 2014</font></span></b></td>
 		</tr>
 		<tr>
 			<td bgcolor="#FFFFFF" align="center" colspan="2">
 			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Arial" color="#000080"><a href="index-2.html">
+			<font face="Arial" color="#000080"><a href="index.html">
 			<font face="Arial" color="#000080">
 			<span style="text-decoration: none">Home</span></font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</font><a href="Dates%20%26%20programmes.html">
@@ -238,5 +239,4 @@ Palace</title>
 </div>
 
 <!--msnavigation--></td></tr><!--msnavigation--></table></body>
-<!-- Mirrored from www.scotchhop.org.uk/Q & A.htm by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 10 Feb 2014 22:51:27 GMT -->
 </html>
