--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@ Palace</title>
 			<span style="text-transform: uppercase; font-style: italic; font-weight: 700">
 			<font face="Fine Hand" size="6" color="#000080">25th year</font></span></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">Wednesday </font><font size="5">
-			<span style="font-family: Arial,sans-serif">16th, 23rd July, </span>
-			<font face="Arial">&nbsp;</font></font><span style="font-family: Arial,sans-serif"><font size="5">30th 
-			July</font></span></b></p>
+			<b><font size="5" face="Arial">5 Wednesdays...</font></b></p>
+			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
+			<b><font size="5">
+			<span style="font-family: Arial,sans-serif">16th, 23rd, 30th July,</span>
+			<font face="Arial">&nbsp;</font></font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5" face="Arial">6th &amp; </font>
 			<span style="font-family: Arial,sans-serif"><font size="5">13th 
@@ -43,7 +44,7 @@ Palace</title>
 		<tr>
 			<td bgcolor="#FFFFFF" align="center" colspan="2">
 			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Arial" color="#000080"><a href="index-2.html">
+			<font face="Arial" color="#000080"><a href="index.html">
 			<font face="Arial" color="#000080">
 			<span style="text-decoration: none">Home</span></font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</font><a href="Dates%20%26%20programmes.html">
@@ -74,6 +75,16 @@ Palace</title>
 		Scottish&nbsp;&nbsp; Dancing&nbsp;&nbsp; for&nbsp;&nbsp; All&nbsp;&nbsp; 
 		in&nbsp;&nbsp; Linlithgow&nbsp;&nbsp; Palace&nbsp;&nbsp; Courtyard</font></b></td>
 	</tr>
+    <tr>
+        <td colspan="4">
+            <font color="#F02020" style="font-size: 17pt">
+            <p align="center">
+                A brand new web site for 2014 is under construction<br />
+				In the meantime, the current site has the dates and prices for 2014
+			</p>
+            </font>
+        </td>
+    </tr>
 	<tr>
 		<td align="center" valign="top" height="125">
 		<p align="center" style="margin-top: 0; margin-bottom: 0">
@@ -84,9 +95,7 @@ Palace</title>
 			<font size="5" face="Arial">Wednesday</font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b>
-			<font size="5"><span style="font-family: Arial,sans-serif">16th, </span>
-			<font face="Arial">&nbsp;</font><span style="font-family: Arial,sans-serif">23rd July, </span>
-			<font face="Arial">&nbsp;</font></font><span style="font-family: Arial,sans-serif"><font size="5">30th July</font></span></b></p>
+			<font size="5"><span style="font-family: Arial,sans-serif">16th, 23rd &amp; 30th July,</font></span></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5" face="Arial">6th &amp; </font>
 			<span style="font-family: Arial,sans-serif"><font size="5">13th August</font></span></b></p>
@@ -97,13 +106,13 @@ Palace</title>
 			<p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;</p><p align="center" style="margin-top: 0; margin-bottom: 0">
 		<b><font size="4">Tickets on the door</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
-		<b><font size="4">Adults £7.50</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
-		<b><font size="4">Concessions £5</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
+		<b><font size="4">Adults £8.50</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
+		<b><font size="4">Concessions £6.50</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
 		<b><font size="4">Children under 12 years FREE</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<b><font size="4">Season Tickets</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
-		<b><font size="4">Adults £22</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
-		<b><font size="4">Concessions £15</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
+		<b><font size="4">Adults £26</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
+		<b><font size="4">Concessions £20</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
 		<b><font size="4">Tea and Shortbread included</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<b><font size="4">Finish about 10 pm in the Palace</font></b><p align="center" style="margin-top: 0; margin-bottom: 0">
@@ -115,18 +124,6 @@ Palace</title>
 			click here <a href="http://twitter.com/#!/search/realtime/scotchhopp " style="text-decoration: none">
 			<font color="#C0C0C0">
 			<img border="0" src="images/twitter.gif" width="32" height="30" alt="twitter logo"></font></a></font></div>
-			<p style="margin-top: 0; margin-bottom: 0" align="center">
-			&nbsp;<div style="background-color: #000080">
-				<p style="margin-top: 0; margin-bottom: 0" align="center">
-			<font color="#FFFFFF"><span style="text-transform: uppercase"><b>
-			Rotary Scotch Hop</b></span></font><p style="margin-top: 0; margin-bottom: 0" align="center">
-			<font color="#FFFFFF" style="font-size: 11pt"><b>with Ian Cathcart 
-			Band</b></font><p style="margin-top: 0; margin-bottom: 0" align="center">
-			<font color="#FFFFFF" style="font-size: 11pt">Saturday 9th November 2013</font><p style="margin-top: 0; margin-bottom: 0" align="center">
-			<font color="#FFFFFF" style="font-size: 11pt">Linlithgow Academy</font><p style="margin-top: 0; margin-bottom: 0" align="center">
-			<font color="#FFFFFF"><span style="font-size: 11pt">tickets £8&nbsp;&nbsp;</span>
-			<a href="Poster%20A4%202013.pdf">
-			<font color="#FFFFFF" face="Arial" size="2">click here for details</font></a></font></div>
 		</td>
 		<td width="355" valign="top" height="125">
 		<p style="margin-top: 0; margin-bottom: 0">
@@ -213,6 +210,4 @@ Palace</title>
 
 <!--msnavigation--></td></tr><!--msnavigation--></table></body>
 
-
-<!-- Mirrored from www.scotchhop.org.uk/ by HTTrack Website Copier/3.x [XR&CO'2013], Mon, 10 Feb 2014 22:50:55 GMT -->
 </html>
