Added Find us on Facebook.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ Palace</title>
 			click here <a href="http://twitter.com/#!/search/realtime/scotchhopp " style="text-decoration: none">
 			<font color="#C0C0C0">
 			<img border="0" src="images/twitter.gif" width="32" height="30" alt="twitter logo"></font></a></font></div>
+			<div align="center">
+				<a href="https://www.facebook.com/linlithgowscotchhop"><img src="images/facebook-button.png" alt="Find us on Facebook" width="170" height="65" /></a>
+			</div>
 		</td>
 		<td width="355" valign="top" height="125">
 		<p style="margin-top: 0; margin-bottom: 0">
