--- a/index-2.html
+++ b/index-2.html
@@ -44,7 +44,7 @@ Palace</title>
 		<tr>
 			<td bgcolor="#FFFFFF" align="center" colspan="2">
 			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Arial" color="#000080"><a href="index-2.html">
+			<font face="Arial" color="#000080"><a href="index.html">
 			<font face="Arial" color="#000080">
 			<span style="text-decoration: none">Home</span></font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</font><a href="Dates%20%26%20programmes.html">
@@ -124,6 +124,9 @@ Palace</title>
 			click here <a href="http://twitter.com/#!/search/realtime/scotchhopp " style="text-decoration: none">
 			<font color="#C0C0C0">
 			<img border="0" src="images/twitter.gif" width="32" height="30" alt="twitter logo"></font></a></font></div>
+			<div align="center">
+				<a href="https://www.facebook.com/linlithgowscotchhop"><img src="images/facebook-button.png" alt="Find us on Facebook" width="170" height="65" /></a>
+			</div>
 		</td>
 		<td width="355" valign="top" height="125">
 		<p style="margin-top: 0; margin-bottom: 0">
