Changed John Carswell's contact details to those of Sheila McCutcheon.

--- a/Information.html
+++ b/Information.html
@@ -180,8 +180,7 @@ Palace</title>
 			<img border="0" src="images/twitter.gif" width="40" height="40" alt="twitter logo"></a>&nbsp;
 			</font>
 			<p style="margin-top: 0; margin-bottom: 0" align="center">
-			<font size="2">you can follow us on twitter&nbsp;&nbsp;&nbsp;&nbsp; 
-			scotchhopp</font></td>
+			<font size="2">you can follow us on twitter @scotchhopp</font></td>
 		</tr>
 		<tr>
 			<td width="19%">
@@ -233,8 +232,8 @@ Palace</title>
 			<img border="0" src="images/Arial%20view%201.jpg" width="192" height="131" alt="view from the tower"></td>
 			<td width="79%"><b><font size="2">Group bookings&nbsp; </font> </b>
 			<font size="2">If your Group is 10 or 
-			more people please contact John Carswell on 01506 845698 or<a href="mailto:johndcarswell@gmail.com?subject=Scotch Hop"> e mail 
-			us</a> BEFORE the day of the event to arrange a group ticket.</font></td>
+			more people please contact Sheila McCutcheon on 0131-331 1528 or e-mail us at <a href="mailto:scotchhopcommittee@gmail.com">ScotchHopCommittee@gmail.com
+			</a> BEFORE the day of the event to arrange a group ticket.</font></td>
 		</tr>
 		<tr>
 			<td width="98%" colspan="2" align="center"><b><font size="2">Please note that we 
