--- a/Q & A.html
+++ b/Q & A.html
@@ -84,8 +84,10 @@ Palace</title>
 			<br>
 			<b>Do I need to buy tickets beforehand?</b><br>
 			No, please buy them at the door on the night.&nbsp; If your Group is 
-			10 or more people please contact John Carswell BEFORE the day of the 
-			event to arrange a group ticket (01506 845698) . </p>
+			10 or more people please telephone Sheila McCutcheon on 0131-331 1528 
+			or e-mail us at <a href="mailto:scotchhopcommittee@gmail.com">ScotchHopCommittee@gmail.com
+			</a> BEFORE the day of the 
+			event to arrange a group ticket. </p>
 			<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 			<p style="margin-top: 0; margin-bottom: 0" align="justify"><b>Is there a band?<br>
 			</b>Yes,&nbsp;that is one of the attractions of the event,&nbsp;with some of 
