--- a/index-2.html
+++ b/index-2.html
@@ -79,8 +79,7 @@ Palace</title>
         <td colspan="4">
             <font color="#F02020" style="font-size: 17pt">
             <p align="center">
-                A brand new web site for 2014 is under construction<br />
-				In the meantime, the current site has the dates and prices for 2014
+                <a href="Dates%20%26%20programmes.html" style="color: #F02020; text-decoration: underline;">Dance programme</a> has been updated with the dances for this year!
 			</p>
             </font>
         </td>
