--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ Palace</title>
         <td colspan="4">
             <font color="#F02020" style="font-size: 17pt">
             <p align="center">
-                A brand new web site for 2014 is under construction<br />
-				In the meantime, the current site has the dates and prices for 2014
+                <a href="Dates%20%26%20programmes.html" style="color: #F02020; text-decoration: underline;">Dance programme</a> has been updated with the dances for this year!
 			</p>
             </font>
         </td>
@@ -150,7 +149,7 @@ Palace</title>
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<img border="0" src="images/DSC_0201.jpg" width="320" height="267" alt="Scotch Hop at Linlithgow Palace"><p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/DSC_0023%2012.jpg" width="320" height="208" alt="low port 2012"><p align="center" style="margin-top: 0; margin-bottom: 0">
+		<img border="0" src="images/DSC_0023%2012.jpg" width="320" height="208" alt="low port 2012"><p align="center" style="margin-top: 30; margin-bottom: 0">
 		<a href="http://www.linlithgow.com/">
 		<img border="0" src="images/linlithGOw_logo.jpg" width="77" height="120" alt="LinlithGOw logo"></a>&nbsp;&nbsp;
 		<a href="http://www.historic-scotland.gov.uk/"><img border="0" src="images/index.1.jpg" width="93" height="90" alt="Historic Scotland logo"></a>
