Final changes for 2014 last night.

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@ Palace</title>
 		Scottish&nbsp;&nbsp; Dancing&nbsp;&nbsp; for&nbsp;&nbsp; All&nbsp;&nbsp; 
 		in&nbsp;&nbsp; Linlithgow&nbsp;&nbsp; Palace&nbsp;&nbsp; Courtyard</font></b></td>
 	</tr>
-    <tr>
+    <!--<tr>
         <td colspan="4">
             <font color="#F02020" style="font-size: 17pt">
-            <p align="center">
-                <a href="Dates%20%26%20programmes.html" style="color: #F02020; text-decoration: underline;">Dance programme</a> has been updated with the dances for this year!
+            <p align="center" style="color: #F02020;" >
+                13th August 2014: DANCING IS OUTDOORS TONIGHT.<br /> Once again, the forecast is for clouds to blow away and we should have a lovely evening.
 			</p>
             </font>
         </td>
-    </tr>
+    </tr>-->
 	<tr>
 		<td align="center" valign="top" height="125">
 		<p align="center" style="margin-top: 0; margin-bottom: 0">
