--- a/index-2.html
+++ b/index-2.html
@@ -75,15 +75,15 @@ Palace</title>
 		Scottish&nbsp;&nbsp; Dancing&nbsp;&nbsp; for&nbsp;&nbsp; All&nbsp;&nbsp; 
 		in&nbsp;&nbsp; Linlithgow&nbsp;&nbsp; Palace&nbsp;&nbsp; Courtyard</font></b></td>
 	</tr>
-    <tr>
+    <!--<tr>
         <td colspan="4">
             <font color="#F02020" style="font-size: 17pt">
-            <p align="center">
-                <a href="Dates%20%26%20programmes.html" style="color: #F02020; text-decoration: underline;">Dance programme</a> has been updated with the dances for this year!
+            <p align="center" style="color: #F02020;" >
+                13th August 2014: DANCING IS OUTDOORS TONIGHT.<br /> Once again, the forecast is for clouds to blow away and we should have a lovely evening.
 			</p>
             </font>
         </td>
-    </tr>
+    </tr>-->
 	<tr>
 		<td align="center" valign="top" height="125">
 		<p align="center" style="margin-top: 0; margin-bottom: 0">
@@ -149,7 +149,7 @@ Palace</title>
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<img border="0" src="images/DSC_0201.jpg" width="320" height="267" alt="Scotch Hop at Linlithgow Palace"><p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/DSC_0023%2012.jpg" width="320" height="208" alt="low port 2012"><p align="center" style="margin-top: 0; margin-bottom: 0">
+		<img border="0" src="images/DSC_0023%2012.jpg" width="320" height="208" alt="low port 2012"><p align="center" style="margin-top: 30; margin-bottom: 0">
 		<a href="http://www.linlithgow.com/">
 		<img border="0" src="images/linlithGOw_logo.jpg" width="77" height="120" alt="LinlithGOw logo"></a>&nbsp;&nbsp;
 		<a href="http://www.historic-scotland.gov.uk/"><img border="0" src="images/index.1.jpg" width="93" height="90" alt="Historic Scotland logo"></a>
