Added Rotary Club ceilidh 2014 to right column.

--- a/index-2.html
+++ b/index-2.html
@@ -127,18 +127,25 @@ Palace</title>
 				<a href="https://www.facebook.com/linlithgowscotchhop"><img src="images/facebook-button.png" alt="Find us on Facebook" width="170" height="65" /></a>
 			</div>
 		</td>
+		<!-- Original right column photo top row, replaced by advert for Rotary Club ceilidh in 2014
 		<td width="355" valign="top" height="125">
 		<p style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/DSC_0135.jpg" width="340" height="250" alt="Scotch Hop at Linlithgow Palace"></td>
+		<img border="0" src="images/DSC_0135.jpg" width="340" height="250" alt="Scotch Hop at Linlithgow Palace"></td> -->
+		<td width="355" valign="top" rowspan="2" height="125">
+			<img src="images/RotaryClub-2014.jpg" alt="Rotary Club ceilidh">
+			<p align="center">Ticekts/info: David Timpuley 01506-845623</p>
+		</td>
+
 	</tr>
 	<tr>
 		<td align="center" height="252" valign="top">
 		<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<img border="0" src="images/index.3.jpg" width="310" height="245" alt="Scotch Hop Linlithgow Palace"></td>
+		<!-- Original right column photo 2nd row, replaced by advert for Rotary Club ceilidh in 2014
 		<td width="355" height="252" valign="top">
 		<p style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/John%20B%26W2.jpg" width="339" height="249"></td>
+		<img border="0" src="images/John%20B%26W2.jpg" width="339" height="249"></td> -->
 	</tr>
 	<tr>
 		<td align="center" rowspan="4" width="354" valign="top">
