--- a/Pictures.html
+++ b/Pictures.html
@@ -20,17 +20,17 @@ Palace</title>
 			<td width="30%" bgcolor="#FFFFFF">
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<span style="text-transform: uppercase; font-style: italic; font-weight: 700">
-			<font face="Fine Hand" size="6" color="#000080">25th year</font></span></p>
+			<font face="Fine Hand" size="6" color="#000080">26th year</font></span></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5" face="Arial">5 Wednesdays...</font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5">
-			<span style="font-family: Arial,sans-serif">16th, 23rd, 30th July,</span>
+			<span style="font-family: Arial,sans-serif">15th, 22nd, 29th July,</span>
 			<font face="Arial">&nbsp;</font></font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">6th &amp; </font>
-			<span style="font-family: Arial,sans-serif"><font size="5">13th 
-			August 2014</font></span></b></td>
+			<b><font size="5" face="Arial">5th &amp; </font>
+			<span style="font-family: Arial,sans-serif"><font size="5">12th 
+			August 2015</font></span></b></td>
 		</tr>
 		<tr>
 			<td bgcolor="#FFFFFF" align="center" colspan="2">
@@ -48,9 +48,10 @@ Palace</title>
 			<span style="text-decoration: none">Q&amp;A</span></font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="Pictures.html"><span style="text-decoration: none">
 			<font face="Arial" font color="#000080">Pictures </font></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="Print%20Programmes.html">
+			<!-- <a href="Print%20Programmes.html">
 			<font face="Arial" color="#000080">
-			<span style="text-decoration: none">Print Programmes</span></font></a></font></td>
+			<span style="text-decoration: none">Print Programmes</span></font></a></font> -->
+			</td>
 		</tr>
 	</table>
 </div>
