--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@ Palace</title>
 			<td width="30%" bgcolor="#FFFFFF">
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<span style="text-transform: uppercase; font-style: italic; font-weight: 700">
-			<font face="Fine Hand" size="6" color="#000080">25th year</font></span></p>
+			<font face="Fine Hand" size="6" color="#000080">26th year</font></span></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5" face="Arial">5 Wednesdays...</font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5">
-			<span style="font-family: Arial,sans-serif">16th, 23rd, 30th July,</span>
+			<span style="font-family: Arial,sans-serif">15th, 22nd, 29th July,</span>
 			<font face="Arial">&nbsp;</font></font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">6th &amp; </font>
-			<span style="font-family: Arial,sans-serif"><font size="5">13th 
-			August 2014</font></span></b></td>
+			<b><font size="5" face="Arial">5th &amp; </font>
+			<span style="font-family: Arial,sans-serif"><font size="5">12th 
+			August 2015</font></span></b></td>
 		</tr>
 		<tr>
 			<td bgcolor="#FFFFFF" align="center" colspan="2">
@@ -57,9 +57,10 @@ Palace</title>
 			<span style="text-decoration: none">Q&amp;A</span></font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="Pictures.html"><span style="text-decoration: none">
 			<font face="Arial" font color="#000080">Pictures </font></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="Print%20Programmes.html">
+			<!--<a href="Print%20Programmes.html">
 			<font face="Arial" color="#000080">
-			<span style="text-decoration: none">Print Programmes</span></font></a></font></td>
+			<span style="text-decoration: none">Print Programmes</span></font></a></font>-->
+			</td>
 		</tr>
 	</table>
 </div>
@@ -94,10 +95,10 @@ Palace</title>
 			<font size="5" face="Arial">Wednesday</font></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b>
-			<font size="5"><span style="font-family: Arial,sans-serif">16th, 23rd &amp; 30th July,</font></span></b></p>
+			<font size="5"><span style="font-family: Arial,sans-serif">15th, 22nd &amp; 29th July,</font></span></b></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
-			<b><font size="5" face="Arial">6th &amp; </font>
-			<span style="font-family: Arial,sans-serif"><font size="5">13th August</font></span></b></p>
+			<b><font size="5" face="Arial">5th &amp; </font>
+			<span style="font-family: Arial,sans-serif"><font size="5">12th August 2015</font></span></b></p>
 			<p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;</p>
 		<p align="center" style="margin-top: 0; margin-bottom: 0">
@@ -127,25 +128,24 @@ Palace</title>
 				<a href="https://www.facebook.com/linlithgowscotchhop"><img src="images/facebook-button.png" alt="Find us on Facebook" width="170" height="65" /></a>
 			</div>
 		</td>
-		<!-- Original right column photo top row, replaced by advert for Rotary Club ceilidh in 2014
 		<td width="355" valign="top" height="125">
 		<p style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/DSC_0135.jpg" width="340" height="250" alt="Scotch Hop at Linlithgow Palace"></td> -->
+		<img border="0" src="images/DSC_0135.jpg" width="340" height="250" alt="Scotch Hop at Linlithgow Palace"></td> 
+		<!-- Advert for Rotary Club ceilidh 2014
 		<td width="355" valign="top" rowspan="2" height="125">
 			<img src="images/RotaryClub-2014.jpg" alt="Rotary Club ceilidh">
-			<p align="center">Ticekts/info: David Timpuley 01506-845623</p>
-		</td>
+			<p align="center">Tickets/info: David Timpuley 01506-845623</p>
+		</td>-->
 
 	</tr>
 	<tr>
 		<td align="center" height="252" valign="top">
 		<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<img border="0" src="images/index.3.jpg" width="310" height="245" alt="Scotch Hop Linlithgow Palace"></td>
-		<!-- Original right column photo 2nd row, replaced by advert for Rotary Club ceilidh in 2014
 		<td width="355" height="252" valign="top">
 		<p style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/John%20B%26W2.jpg" width="339" height="249"></td> -->
+		<img border="0" src="images/John%20B%26W2.jpg" width="339" height="249"></td>
 	</tr>
 	<tr>
 		<td align="center" rowspan="4" width="354" valign="top">
