Added Lottery Funded logo.

--- a/index.html
+++ b/index.html
@@ -157,13 +157,12 @@ Palace</title>
 		<img border="0" src="images/DSC_0201.jpg" width="320" height="267" alt="Scotch Hop at Linlithgow Palace"><p align="center" style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
 		<img border="0" src="images/DSC_0023%2012.jpg" width="320" height="208" alt="low port 2012"><p align="center" style="margin-top: 30; margin-bottom: 0">
-		<a href="http://www.linlithgow.com/">
-		<img border="0" src="images/linlithGOw_logo.jpg" width="77" height="120" alt="LinlithGOw logo"></a>&nbsp;&nbsp;
-		<a href="http://www.historic-scotland.gov.uk/"><img border="0" src="images/index.1.jpg" width="93" height="90" alt="Historic Scotland logo"></a>
-		<a href="http://www.westlothian.gov.uk/"><img border="0" src="images/THE%20NEW%20wl_colourlogo.jpg" width="120" height="54" alt="West Lothian Council logo"></a><p align="center" style="margin-top: 0; margin-bottom: 0">
-		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
+		<a href="https://www.biglotteryfund.org.uk/scotland">
+			<img src="images/lottery-funded.jpg" alt="Lottery Funded" />
+		</a>
+		<a href="http://www.historic-scotland.gov.uk/"><img border="0" src="images/index.1.jpg" width="93" height="90" alt="Historic Scotland logo" style="margin: 0 0 25px 4px"></a>
 		<a href="http://visitwestlothian.co.uk/">
-		<img border="0" src="images/Visit%20West%20Lothian.jpg" width="300" height="30" alt="visit West Lothian"></a> </td>
+		<img border="0" src="images/Visit%20West%20Lothian.jpg" width="300" height="64" alt="visit West Lothian"></a> </td>
 		<td colspan="2" align="center">
 		<p style="margin-top: 0; margin-bottom: 0">&nbsp;<img border="0" src="images/kilt%205%202012.jpg" width="93" height="130" alt="Kilt">
 		<img border="0" src="images/Kilt%2020.jpg" width="96" height="130" alt="blue kilt">
@@ -176,7 +175,12 @@ Palace</title>
 		&nbsp;<p style="margin-top: 0; margin-bottom: 0">
 		<img border="0" src="images/DSC_0222.jpg" width="340" height="225"><p style="margin-top: 0; margin-bottom: 0">
 		&nbsp;<p style="margin-top: 0; margin-bottom: 0">
-		<img border="0" src="images/DSC_0046.jpg" width="340" height="255"></td>
+		<img border="0" src="images/DSC_0046.jpg" width="340" height="255">
+		<a href="http://www.linlithgow.com/">
+		<img border="0" src="images/linlithGOw_logo.jpg" width="77" height="120" alt="LinlithGOw logo" style="margin: 12px 36px 0 0"></a>
+		<a href="http://www.westlothian.gov.uk/"><img border="0" src="images/THE%20NEW%20wl_colourlogo.jpg" width="120" height="54" alt="West Lothian Council logo"></a><p align="center" style="margin-top: 0; margin-bottom: 0">
+		&nbsp;<p align="center" style="margin-top: 0; margin-bottom: 0">
+	</td>
 	</tr>
 	<tr>
 		<td colspan="2" align="center" valign="top">
