Changed phone number to Sheila's and clarified tourist contact details in links.

--- a/Q & A.html
+++ b/Q & A.html
@@ -69,9 +69,8 @@ Palace</title>
 		<tr>
 			<td width="712" valign="top">
 			<p style="margin-top: 0; margin-bottom: 0">Here are the answers to 
-			your frequently asked questions. If none of&nbsp;these answer your 
-			questions please contact Linlithgow Palace on 
-			01506&nbsp;&nbsp; 842896.<br>
+			your frequently asked questions. If none of&nbsp;these answers your 
+			questions please contact Sheila on 0131-331 1528.<br>
 			<br>
 			<b>Are beginners welcome?</b><br>
 			Yes,&nbsp;it is &quot;Scottish Dancing for All&quot; and it attracts a wide range 
@@ -143,15 +142,12 @@ Palace</title>
 			Please mention Scotch Hop when booking.<br>
 			<br>
 			<b>Are there special prices for Groups?</b><br>
-			If your Group is 10 or more people please contact John Carswell ( 
-			01506 845698) BEFORE the day of the event to arrange a group ticket.<br>
+			If your Group is 10 or more people please contact Sheila on 0131-331 1528 BEFORE the day of the event to arrange a group ticket.<br>
 			<br>
 			<b>Tourist Information</b><br>
 			If you require further information or directions or information on 
-			Linlithgow and the surrounding area please contact<p style="margin-top: 0; margin-bottom: 0">
-			Burgh Halls<font face="Arial"> </font>01506 282720
-			<font face="Arial">and 
-			Palace 01506 842896</font><font face="Arial" size="2">&nbsp; </font>
+			Linlithgow and the surrounding area please contact Burgh Halls and 
+			Palace 01506 842896<font face="Arial" size="2">&nbsp; </font>
 			<p style="margin-top: 0; margin-bottom: 0">
 			&nbsp;<p style="margin-top: 0; margin-bottom: 0">
 			Please help us to make Scotland litter free </td>
