--- a/Information.html
+++ b/Information.html
@@ -98,7 +98,7 @@ Palace</title>
 			<td width="79%">
 			<p align="center" style="margin-top: 0; margin-bottom: 0"><b>Links</b></p>
 			<p align="center" style="margin-top: 0; margin-bottom: 0">
-			<font size="2">Linlithgow Palace
+			<font size="2">For general tourist information not connected with Scotch Hop<br />Linlithgow Palace
 			phone&nbsp;01506 </font><font face="Arial" size="2">845896&nbsp;
 			</font><font size="2">(from outside the UK +44 1506 </font>
 			<font face="Arial" size="2">845896)</font></p>
