Added Sheila's surname in every reference for consistency.

--- a/Q & A.html
+++ b/Q & A.html
@@ -70,7 +70,7 @@ Palace</title>
 			<td width="712" valign="top">
 			<p style="margin-top: 0; margin-bottom: 0">Here are the answers to 
 			your frequently asked questions. If none of&nbsp;these answers your 
-			questions please contact Sheila on 0131-331 1528.<br>
+			questions please contact Sheila McCutcheon on 0131-331 1528.<br>
 			<br>
 			<b>Are beginners welcome?</b><br>
 			Yes,&nbsp;it is &quot;Scottish Dancing for All&quot; and it attracts a wide range 
@@ -142,7 +142,7 @@ Palace</title>
 			Please mention Scotch Hop when booking.<br>
 			<br>
 			<b>Are there special prices for Groups?</b><br>
-			If your Group is 10 or more people please contact Sheila on 0131-331 1528 BEFORE the day of the event to arrange a group ticket.<br>
+			If your Group is 10 or more people please contact Sheila McCutcheon on 0131-331 1528 BEFORE the day of the event to arrange a group ticket.<br>
 			<br>
 			<b>Tourist Information</b><br>
 			If you require further information or directions or information on 
