Updated content, mainly in index.html, to show that 2015 season is complete, and to mention the November Scotch Hop run by the Rotary. Also tidied up some of the html manually. Ready for review by LSH committee before going live.

--- a/Dates & programmes.html
+++ b/Dates & programmes.html
@@ -60,20 +60,20 @@ Linlithgow Palace</title>
 <div align="center">
 	<table border="0" width="1000" bgcolor="#FFFFFF" cellspacing="4" cellpadding="4">
 	 	
-	 	<!---
+
 	 	<tr>
 	 		<td colspan="2" align="center">
 	 			<font size="4" color="red">
-	 			   THIS IS THE PROGRAMME FOR LAST YEAR<br />
-	 			   This page will be updated with the 2015 programme as soon as it's available
+	 			   THIS IS THE PROGRAMME FOR 2015<br />
+	 			   This page will be updated with the 2016 programme as soon as it's available
 	 			</font>
 	 		</td>
 	 	</tr>
-	 	--->
+
 
 		<tr>
 			<td colspan="2" align="center">
-			<p style="margin-top: 0; margin-bottom: 0"><b><font size="5">Dates &amp; Programmes</font></b></p>
+			<p style="margin-top: 0; margin-bottom: 0"><b><font size="5">2015 Dates &amp; Programmes (2016 Programme is being prepared)</font></b></p>
 			</td>
 		</tr>		
 		<tr>
