tidied up and commented html on index file

--- a/Dates & programmes.html
+++ b/Dates & programmes.html
@@ -73,7 +73,7 @@ Linlithgow Palace</title>
 
 		<tr>
 			<td colspan="2" align="center">
-			<p style="margin-top: 0; margin-bottom: 0"><b><font size="5">2015 Dates &amp; Programmes (2016 Programme is being prepared)</font></b></p>
+			<p style="margin-top: 0; margin-bottom: 0"><b><font size="5">2015 Dates &amp; Programmes</font></b></p>
 			</td>
 		</tr>		
 		<tr>
