--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@ div.WordSection1
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<span style="text-transform: uppercase; font-style: italic; font-weight: 700">
 			<font face="Fine Hand" size="6" color="#000080">
-      26th year <br />Now Completed
+      2016 Dates
       </font></span></p>
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5" face="Arial">
-      5 Wednesdays...
-      <br />15th, 22nd, 29th July,
-      <br />5th &amp; 12th August 2015
+      13th, 20th, 27th July,
+      <br />3rd &amp; 10th August
       </font>
       </b>
       </p>
