updated Rotary event details slightly

--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@ div.WordSection1
       <br />Tickets &pound;8 <font size="3">(students &pound;6, under 12s free)</font>
       <br />from the Line Gallery, Linlithgow, 
       <br />Derek Chambers (01506 201680)
-      <br />or email <a href="mailto:ScotchHop2015@gmail.com">ScotchHop2015@gmail.com</a> 
+      <br />or <a href="mailto:ScotchHop2015@gmail.com">ScotchHop2015@gmail.com</a> 
       <br /><font size="2">(note that this email is for the Rotary event only)</font>
+      <br />or on the door.
       </font></b></p>
 
 		</td>
