Changed .... to ... on index page.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ div.WordSection1
 			<p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
 			<b><font size="5" face="Arial">
       We hope you all had a great time in the Palace.
-      <br />Now there is an encore ....
+      <br />Now there is an encore...
       </font></b></p>
       
       <p class="MsoNormal" style="margin-top: 0; margin-bottom: 0" align="center">
